#357 Improve top pages

--- a/app/views/shared/_render_images.html.erb
+++ b/app/views/shared/_render_images.html.erb
@@ -1,5 +1,39 @@
 <!-- Render images as usual -->
 <% images.each_with_index do |image, index| %>
+
+    <div class="block has-gutters">
+      <div class="height"><%= image.height %></div>
+      <%= render_image(image) %>
+
+      <% if current_user %>
+      <div class="titleBox">
+        <div class="id"><%= image.id %></div>
+        <%= button_group class: 'pull-right blocks' do %>
+          <%= render_clip_button(image) %>
+          <%= render_show_button(image) %>
+          <%= render_show_debug_button(image) if Rails.env.development? %>
+        <% end %>
+        <br />
+      </div>
+      <% end %>
+
+      <!-- Add another anchor to the modal as it gets unclickable when thumbnail's height is to short -->
+      <%= link_to ({ controller: '/images', action: 'show', id: image.id.to_s, remote: true, 'data-toggle' => "modal", 'data-target' => '#modal-image' }) do %>
+        <div class="title">
+          <%= image.title.to_s %><br />
+          <div class="time-string">
+            <br /><%= "Posted at: #{get_jst_string(image.posted_at)}" %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+
+  <% end %>
+  <div id="loader">
+    <%= image_tag asset_path('round_loader_mini.gif')%>
+  </div>
+
+<!--<% images.each_with_index do |image, index| %>
   <div class="block has-gutters">
     <div class="height"><%= image.height %></div>
     <% if image.page_url %>
@@ -18,4 +52,4 @@
 <% end %>
 <div id="loader">
   <%= image_tag asset_path('round_loader_mini.gif')%>
-</div>
+</div>-->
