--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,7 @@
+<%= stylesheet_link_tag 'users' %>
+<%= stylesheet_link_tag 'images_detail' %>
+<%= render 'shared/modal_image' %>
+
 <!-- Start of StatCounter Code for Default Guide -->
 <%= javascript_include_tag 'stat_counter' if Rails.env.production? %>
 <noscript><div class="statcounter"><a title="shopify visitor
