--- a/app/views/welcome/signup.html.erb
+++ b/app/views/welcome/signup.html.erb
@@ -1,3 +1,7 @@
+<%= stylesheet_link_tag 'users' %>
+<%= stylesheet_link_tag 'images_detail' %>
+<%= render 'shared/modal_image' %>
+
 <!-- A version of embedding description and login form as boxes. -->
 <!-- Render description box and login form box only at the first time -->
 <br />
