--- a/app/views/debug/index.html.erb
+++ b/app/views/debug/index.html.erb
@@ -3,6 +3,15 @@
 and this page would be used as the alternative in production.<br />
 <br />
 <br />
+<!-- Render Ransack search form -->
+<%= search_form_for @search, url: search_debug_path, html: { class: "custom-search-form navbar-form navbar-left collapse-item", role: 'search' } do |f| %>
+  <div class="input-group">
+    <%= f.text_field :tags_name_cont, class: "form-control", placeholder: "Search", "data-pre" => autocomplete_tags_path %>
+    <span class="input-group-btn">
+    <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+  </div>
+<% end %>
+<br />
 <%= button_group class: 'btn-group-vertical' do %>
   <%= bs_button_to 'View all images', images_path, class: 'btn-default' %>
   <%= bs_button_to 'Target images', target_images_path, class: 'btn-default' %>
