--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -42,7 +42,8 @@
       <div class="input-group">
         <%= f.text_field :tags_name_cont, class: "form-control", placeholder: "Search"  %>
         <span class="input-group-btn">
-        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+          <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+        </span>
       </div>
     <% end %>
   <% end %>
