--- a/app/views/users/preferences.html.erb
+++ b/app/views/users/preferences.html.erb
@@ -1,42 +1,54 @@
 <%= stylesheet_link_tag 'users' %>
 
 <div class="container-fluid">
-  <div class="col-md-8">
 
-  <div class="col-md-4">Search a tag to follow!</div>
-  <br />
+    <!-- Render the search form -->
+    <%= search_form_for @search_tags, url: preferences_users_path, html: { method: :post },
+      remote: true, class: "search-tags col-md-5 col-lg-5 col-sm-5" do |f| %>
+      <!--<div class="col-md-4"></div>-->
+        Search a tag to follow!
+        <div class="input-group">
+        <%= f.text_field :name_cont, class: "form-control",  placeholder: 'Search tags' %>
 
-  <!-- Render the search form -->
-  <%= search_form_for @search_tags, url: preferences_users_path, html: { method: :post }, remote: true do |f| %>
-    <div class="col-md-4">
-      <%= f.text_field :name_cont, class: "form-control" %>
-    </div>
+        <span class="input-group-btn">
+          <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+        </span>
+        </div>
 
-    <div class="actions">
-      <%= f.submit 'Search', class: "btn btn-default" %>
-    </div>
-  <% end %>
-
-
-  <!-- Render a dropdown to switch popular tags source -->
-  <%= bs_dropdown_button_to list_glyphicon do %>
-    <li><%= link_to 'Tags used for crawling', { controller: 'users', action: 'preferences', target_words: true }, class: 'btn-default' %></li>
-    <li><%= link_to 'All tags', { controller: 'users', action: 'preferences' }, class: 'btn-default' %></li>
-  <% end %>
-  <br /><br />
+    <% end %>
 
 
+    <!-- Render a dropdown to switch popular tags source
+    <%= bs_dropdown_button_to list_glyphicon do %>
+      <li><%= link_to 'Tags used for crawling', { controller: 'users', action: 'preferences', target_words: true }, class: 'btn-default' %></li>
+      <li><%= link_to 'All tags', { controller: 'users', action: 'preferences' }, class: 'btn-default' %></li>
+    <% end %>
+    <br />
+    <br />-->
+
+
+  <div class="clearfix visible-lg-block"></div>
+  <div class="clearfix visible-md-block"></div>
+  <div class="clearfix visible-sm-block"></div>
+
+<div class="row vertical-align">
   <!-- Render popular tags or search result in the partial -->
-  <div class="wrapper-popular-tags">
+  <div class="wrapper-popular-tags col-md-5 col-lg-5">
     <%= render partial: 'users/popular_tags', locals: { tags_result: @tags_result, popular_tags: @popular_tags } %>
   </div>
 
-  <div class="arrow">></div>
+  <div class="arrow col-md-1 col-lg-1">
+    <%= image_tag asset_path('arrow_aqua_green_sm.png') %>
+  </div>
+
+  <div class="clearfix visible-sm-block"></div>
 
   <!-- Render followed tags in the partial -->
-  <div class="wrapper-followed-tags">
+  <div class="wrapper-followed-tags col-md-5 col-lg-5">
     <%= render partial: 'users/followed_tags', locals: { tags: @tags, test: 'test0' } %>
   </div>
+</div>
+
 
 
   <!-- Insert space -->
@@ -45,5 +57,6 @@
     <br />
     <br />
   </div>
-</div>
+
+
 </div>
