--- a/app/views/users/preferences.html.erb
+++ b/app/views/users/preferences.html.erb
@@ -5,7 +5,6 @@
     <!-- Render the search form -->
     <%= search_form_for @search_tags, url: preferences_users_path, html: { method: :post },
       remote: true, class: "search-tags col-md-5 col-lg-5 col-sm-5" do |f| %>
-      <!--<div class="col-md-4"></div>-->
         Search a tag to follow!
         <div class="input-group">
         <%= f.text_field :name_cont, class: "form-control",  placeholder: 'Search tags' %>
@@ -14,8 +13,9 @@
           <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
         </span>
         </div>
-
     <% end %>
+
+
 
 
     <!-- Render a dropdown to switch popular tags source
@@ -47,6 +47,22 @@
   <div class="wrapper-followed-tags col-md-5 col-lg-5">
     <%= render partial: 'users/followed_tags', locals: { tags: @tags, test: 'test0' } %>
   </div>
+</div>
+<br />
+<br />
+
+<div class="clearfix visible-md-block"></div>
+<div class="clearfix visible-sm-block"></div>
+<div class="search-tags col-md-10 col-lg-10 col-sm-10">
+  Set default sites for filtering:
+  <%= bootstrap_form_tag url: set_sites_users_path, class: "col-md-5 col-lg-5 col-sm-5" do |f| %>
+    <% Image::TARGET_SITES_DISPLAY.each_with_index do |site, count| %>
+      <label class="checkbox-inline">
+      <%= f.check_box site.parameterize.underscore.to_sym, label: Image::TARGET_SITES_DISPLAY[count], label_class: "checkbox-inline" %>
+    </label>
+    <% end %>
+    <%= f.submit %>
+  <% end %>
 </div>
 
 
