--- a/app/views/shared/_header_top.html.erb
+++ b/app/views/shared/_header_top.html.erb
@@ -15,7 +15,8 @@
     <%= navbar_group class: 'collapse-header', id: 'menu' do %>
       <!-- Other items is rendered by helper methods as usual -->
       <%= navbar_item 'RSS', rss_users_path, class: 'collapse-item' %>
-      <%= navbar_item 'Sign in', '/signin_with_password', class: 'collapse-item' %>
+      <%# navbar_item 'Sign in', '/signin_with_password', class: 'collapse-item' %>
+      <%= navbar_item 'Tags', '/tags', class: 'collapse-item' %>
       <%= navbar_item 'About us', new_contact_path, class: 'collapse-item' %>
     <% end %>
 
@@ -28,5 +29,6 @@
         <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
       </div>
     <% end %>
+
   <% end %>
 </nav>
