--- a/app/views/welcome/tags.html.erb
+++ b/app/views/welcome/tags.html.erb
@@ -1,7 +1,28 @@
 <%= stylesheet_link_tag 'table_custom' %>
 
 <div class="container-fluid">
-  <h3>Popular tags</h3>
+   <!-- Render the search form -->
+    <%= search_form_for @search_tags, url: '/tags', html: { method: :post },
+      class: "search-tags col-md-5 col-lg-5 col-sm-5" do |f| %>
+        <div class="input-group">
+        <%= f.text_field :name_cont, class: "form-control",  placeholder: 'Search tags' %>
+
+        <span class="input-group-btn">
+          <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+        </span>
+        </div>
+    <% end %>
+
+  <div class="clearfix visible-lg-block"></div>
+  <div class="clearfix visible-md-block"></div>
+  <div class="clearfix visible-sm-block"></div>
+
+
+  <% unless @tags_result %>
+    <h3>Popular Tags</h3>
+  <% else %>
+    <h3>Search Result</h3>
+  <% end %>
 
 
   <%# bs_table_tag do %>
@@ -18,12 +39,22 @@
   </thead>
 
   <tbody>
-    <% @tags.each_with_index do |tag, count| %>
-    <tr>
-      <td><%= tag.name %></td>
-      <td><%= tag.images_count %></td>
-      <td><%= count %></td>
-    </tr>
+    <% unless @tags_result %>
+      <% @tags.each_with_index do |tag, count| %>
+      <tr>
+        <td><%= tag.name %></td>
+        <td><%= tag.images_count %></td>
+        <td><%= count %></td>
+      </tr>
+      <% end %>
+    <% else %>
+      <% @tags_result.each_with_index do |tag, count| %>
+      <tr>
+        <td><%= tag.name %></td>
+        <td><%= tag.images_count %></td>
+        <td><%= count %></td>
+      </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
