Display favorite count

--- a/app/views/shared/_show_image.html.erb
+++ b/app/views/shared/_show_image.html.erb
@@ -60,6 +60,9 @@
 
     <dt>Created At:</dt>
     <dd><%= "#{image.created_at}" %></dd>
+
+    <dt>Favorites: </dt>
+    <dd><%= image.original_favorite_count %></dd>
   </dl>
 
 
