--- a/app/views/shared/_modal_board.html.erb
+++ b/app/views/shared/_modal_board.html.erb
@@ -1,6 +1,10 @@
-<div class="modal modal-boards" id="modal-board" tabindex="-1" role="dialog" aria-labelledby="modal_show_clip_form" aria-hidden="true" >
+<div class="modal modal-boards" id="modal-board" tabindex="-1" role="dialog" aria-labelledby="modal_show_clip_form" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Choose a board to clip</h4>
+      </div>
       <div id="modal-board-body" class="modal-body">
         <!-- render shared/_modal_board.html.erb from .js.erb here -->
       </div>
