#367 Add FAQ page to the headers

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -32,6 +32,7 @@
       <%= navbar_item 'Home', home_users_path, class: 'collapse-item' %>
       <%= navbar_item 'RSS', rss_users_path, class: 'collapse-item' %>
       <%= navbar_item 'Tags', preferences_users_path, class: 'collapse-item' %>
+      <%= navbar_item 'FAQ', '/faq', class: 'collapse-item' %>
       <%= navbar_item 'About us', new_contact_path, class: 'collapse-item' %>
 
     <% end %>
