--- a/app/views/shared/_header_top.html.erb
+++ b/app/views/shared/_header_top.html.erb
@@ -17,6 +17,7 @@
       <%= navbar_item 'RSS', rss_users_path, class: 'collapse-item' %>
       <%# navbar_item 'Sign in', '/signin_with_password', class: 'collapse-item' %>
       <%= navbar_item 'Tags', '/tags', class: 'collapse-item' %>
+      <%= navbar_item 'FAQ', '/faq', class: 'collapse-item' %>
       <%= navbar_item 'About us', new_contact_path, class: 'collapse-item' %>
     <% end %>
 
