--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -1,12 +1,19 @@
+<%# stylesheet_link_tag 'scaffolds' %>
+
 <div class="container-fluid">
   <div class="row-fluid">
-    <div class="col-md-4 about-us">
+    <div class="col-md-6 about-us">
       <br />
-      <h2>FAQ</h2>
-      <strong>Why sometimes does it fail to get next images when I'm scrolling?</strong><br />
-        If you are using Google Chrome, and getting "Failed to load resource" error on javascript console, perhaps that's because you are using Adblock Plus extension. <br />
-      To fix this, simply add "ispicks.com" to its whitelist domains. Please see <%= link_to 'this', 'http://stackoverflow.com/questions/4390134/failed-to-load-resource-under-chrome'.html_safe %> stackoverflow page for further details.
+      <strong>What is this site?</strong><br />
+        Ispick is a website that gathers anime artworks automatically. You can browse images with the pinterest-like layout, based on RSS streams, or simply on tag search results. Also, you can create your own image feed by registering to our site.<br />
+        If you're an original author and want us to delete your works on the site, please feel free to contact us.<br /><br />
+      <strong>Why does it fail to scroll when I browse on Chrome?</strong><br />
+         This is a broser side bug and is fixed in version 40, as following stackoverflow page describes:
+        <%= link_to 'http://stackoverflow.com/questions/26408931/bizarre-error-in-chrome-developer-console-failed-to-load-resource-neterr-ca'.html_safe, 'http://stackoverflow.com/questions/26408931/bizarre-error-in-chrome-developer-console-failed-to-load-resource-neterr-ca' %> <br /><br />
+         To address this problem, you can use other browsers like Firefox, or you can try <%= link_to 'Chrome 40 beta', 'http://googlechromereleases.blogspot.jp/'.html_safe %>.<br />
       <br />
+      <strong>Are you going to increase the number of sites?</strong><br />
+        Yes, currently we're planning to add deviantART, Pixiv, Nicoseiga, and other image board style websites.<br /><br />
   </div>
 </div>
 <br />
