--- a/app/views/shared/_about_us.html.erb
+++ b/app/views/shared/_about_us.html.erb
@@ -2,7 +2,7 @@ Ispick is an automatic anime artworks aggregator.<br />
   <br />
     Not only you can search images in the database, but you can also create image feeds based on text tags. Currently there are a lot of anime artwork aggregation sites, and most of artworks on them remain unseen. For now, this problem is partly solved by manual aggregating taken place on websites like Tumblr / Pinterest. <br />
   <br />
-    However, over the long term we believe we can help you more by providing our automated system, as Google did years ago. For now it only supports image search by limited text tags, but we're going to implement image search based on image, using deep neural networks.
+    However, over the long term we believe we can help you more by providing our automated system, as Google and other specialized search engines did years ago. For now it only supports image search by text tags, but we're going to implement image search based on image, using deep neural networks.
   Our goal is "Letting people see anime artworks they like automatically", and our mission is "To solve problems and improve the world by more intelligent, automated systems".<br />
   <br />
     Since we are at the very first stage and the system need to be improved more, it would be realy great and helpful if we could have your feedbacks. Anything related to this website and field is welcomed.<br />
