--- a/app/views/target_images/_convnet_images.html.erb
+++ b/app/views/target_images/_convnet_images.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag :div, class: "temp_information", data: { align: false } do %>
+<%= content_tag :div, class: "temp_information", data: { scroll: false } do %>
 <% end %>
 
 
