--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -6,7 +6,7 @@
       <br />
       <strong>What is this site?</strong><br />
         Ispick is a website that gathers anime artworks automatically. You can browse images with the pinterest-like layout, based on RSS streams, or simply on tag search results. Also, you can create your own image feed by registering to our site.<br />
-        If you're an original author and want us to delete your works on the site, please feel free to contact us.<br /><br />
+        If you're an original author and want to delete your works on the site, please feel free to contact us.<br /><br />
       <strong>Why does it fail to scroll when I browse on Chrome?</strong><br />
          This is a broser side bug and is fixed in version 40, as following stackoverflow page describes:
         <%= link_to 'http://stackoverflow.com/questions/26408931/bizarre-error-in-chrome-developer-console-failed-to-load-resource-neterr-ca'.html_safe, 'http://stackoverflow.com/questions/26408931/bizarre-error-in-chrome-developer-console-failed-to-load-resource-neterr-ca' %> <br /><br />
