#332 Use infinite scroll as default at top pages

--- a/app/views/images/search.html.erb
+++ b/app/views/images/search.html.erb
@@ -34,4 +34,4 @@
   <br />
 
 <!-- image rendering starts from here -->
-<%= render partial: 'users/home_images', locals: { images: @images } %>
+<%= render partial: 'users/home_images', locals: { images: @images, count: @count, pagination: @pagination } %>
