--- a/app/views/shared/_render_images.html.erb
+++ b/app/views/shared/_render_images.html.erb
@@ -1,3 +1,7 @@
+<!-- Disable pagination -->
+<%= content_tag :div, class: "temp_information", data: { scroll: true } do %>
+<% end %>
+
 <!-- Render images as usual -->
 <% images.each_with_index do |image, index| %>
 
