--- a/app/views/tags/home.html.erb
+++ b/app/views/tags/home.html.erb
@@ -33,4 +33,4 @@
 </p>
 
 <!-- image rendering starts from here -->
-<%= render partial: 'users/home_images', locals: { images: @images } %>
+<%= render partial: 'users/home_images', locals: { images: @images, count: @count, pagination: @pagination } %>
