#372 Fix comments and texts

--- a/app/views/pages/about_us.html.erb
+++ b/app/views/pages/about_us.html.erb
@@ -1,8 +1,1 @@
-<!-- Not in use at 14/10/07-->
-<div style="width:400px;">
-  <%= render partial: 'shared/about_us' %>
-
-  blog: ispick.tumblr.com<br />
-  email: ispic6"at mark"gmail.com<br />
-  twitter: @ispic6
-</div>
+<!-- Not in use. Go to app/views/notifications_mailer/new.html.erb for editing about us page! -->
