--- a/app/views/users/preferences.html.erb
+++ b/app/views/users/preferences.html.erb
@@ -2,6 +2,15 @@
 
 
 <div class="container-fluid">
+    <!-- Render flash notices -->
+    <% if flash.present? %>
+      <div class="search-tags col-md-5 col-lg-5">
+        <%= render partial: "shared/flash_messages", flash: flash %>
+      </div>
+      <div class="clearfix visible-lg-block"></div>
+      <div class="clearfix visible-md-block"></div>
+      <div class="clearfix visible-sm-block"></div>
+    <% end %>
 
     <!-- Render the search form -->
     <%= search_form_for @search_tags, url: preferences_users_path, html: { method: :post },
