--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -1,3 +1,7 @@
+.navbar{
+  margin-bottom: 0px;
+}
+
 // Fix Kaminari pagination gem's styles to Twitter Bootstrap ones
 .pagination a, .pagination span.current, .pagination span.gap {
   float: left;
