Reset the unnecessary border-radius

--- a/app/assets/stylesheets/navbar_custom.css.scss
+++ b/app/assets/stylesheets/navbar_custom.css.scss
@@ -4,8 +4,8 @@
 /* navbar */
 .navbar-ispick {
     background-color: #79CECE;//#3F3F3F;//#939393;//#F8F8F8;
-    border-color: #79CECE;//#3F3F3F;
     border-bottom-color: #FFFFFF;
+    border-radius: 0px;
 }
 /* title */
 .navbar-ispick .navbar-brand {
