--- a/app/assets/stylesheets/navbar_custom.css.scss
+++ b/app/assets/stylesheets/navbar_custom.css.scss
@@ -18,16 +18,19 @@
 /* link */
 .navbar-ispick .navbar-nav > li > a {
     color: #E4F5F5;//#777;
+    padding: 10px 25px 20px 25px;
 }
 .navbar-ispick .navbar-nav > li > a:hover,
 .navbar-ispick .navbar-nav > li > a:focus {
     color: #5B9B9B;//#333;
+    border-radius: 4px 4px 0 0;
 }
 .navbar-ispick .navbar-nav > .active > a,
 .navbar-ispick .navbar-nav > .active > a:hover,
 .navbar-ispick .navbar-nav > .active > a:focus {
     color: #E4F5F5;//#555;
     background-color: #5B9B9B;//#E7E7E7;
+    border-radius: 4px 4px 0 0;
 }
 .navbar-ispick .navbar-nav > .open > a,
 .navbar-ispick .navbar-nav > .open > a:hover,
