Adjust the padding

--- a/app/assets/stylesheets/navbar_custom.css.scss
+++ b/app/assets/stylesheets/navbar_custom.css.scss
@@ -65,6 +65,9 @@
 .navbar-ispick .navbar-toggle .icon-bar {
     background-color: #CCC;
 }
+#image_search {
+    padding-top: 5px;
+}
 @media (max-width: 767px) {
     .navbar-ispick .navbar-nav .open .dropdown-menu > li > a {
         color: #777;
