--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -59,4 +59,6 @@ $border: #5B9B9B;//#79CECE;
   float:left;
   display: inline-block;
   vertical-align: middle;
+  margin: 10px 20px 10px 10px;
+  height: 40px;
 }
