Change the icon color

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -62,3 +62,7 @@ $border: #5B9B9B;//#79CECE;
   margin: 10px 20px 10px 10px;
   height: 40px;
 }
+
+.glyphicon-search:before {
+  color: #79CECE;
+}
