--- a/app/views/users/boards.html.erb
+++ b/app/views/users/boards.html.erb
@@ -2,7 +2,7 @@
 <%= render 'shared/modal_image' %>
 <%= render 'shared/modal_board' %>
 
-<div>
+<div class="controlls">
 <!-- Render UIs to add/edit/delete boards -->
 <%= button_group do %>
   <%= bs_dropdown_button_to list_glyphicon do %>
