--- a/app/views/users/preferences.html.erb
+++ b/app/views/users/preferences.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag 'users' %>
 
 
-<div class="container-fluid">
+<div class="container-fluid controlls">
     <!-- Render flash notices -->
     <% if flash.present? %>
       <div class="search-tags col-md-5 col-lg-5">
