--- a/app/views/welcome/tags.html.erb
+++ b/app/views/welcome/tags.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag 'table_custom' %>
 
-<div class="container-fluid">
+<div class="container-fluid controlls">
    <!-- Render the search form -->
     <%= search_form_for @search_tags, url: '/tags', html: { method: :post },
       class: "search-tags col-md-5 col-lg-5 col-sm-5" do |f| %>
