--- a/app/views/images/search.html.erb
+++ b/app/views/images/search.html.erb
@@ -5,7 +5,7 @@
 
 
 <!-- Render images and the dropdown for filtering them -->
-<div style="margin-left: 0px;">
+<div class="controlls">
   <!-- Render the dropdown to provide filtering and sorting functionality-->
   <div class="dropdown">
     <a id="dLabel" role="button" data-toggle="dropdown" class="btn btn-default" data-target="#" href="/page.html">
