--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -22,6 +22,7 @@
       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">User<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu">
           <%= navbar_item 'Boards', boards_users_path, class: 'collapse-item' %>
+          <%= navbar_item 'Preferences', preferences_users_path, class: 'collapse-item' %>
           <%= navbar_item 'Settings', settings_users_path %>
           <%= navbar_dropdown_divider %>
           <%= navbar_item 'Log out', destroy_user_session_path %>
@@ -31,7 +32,7 @@
       <!-- Other items is rendered by helper methods as usual -->
       <%= navbar_item 'Home', home_users_path, class: 'collapse-item' %>
       <%= navbar_item 'RSS', rss_users_path, class: 'collapse-item' %>
-      <%= navbar_item 'Tags', preferences_users_path, class: 'collapse-item' %>
+      <%= navbar_item 'Tags', '/tags', class: 'collapse-item' %>
       <%= navbar_item 'FAQ', '/faq', class: 'collapse-item' %>
       <%= navbar_item 'About us', new_contact_path, class: 'collapse-item' %>
 
