--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -14,7 +14,7 @@
          To address this problem, you can use other browsers like Firefox, or you can try <%= link_to '<u>Chrome 40 beta</u>'.html_safe, 'http://googlechromereleases.blogspot.jp/'.html_safe %>.<br />
       <br />
       <strong>How can I turn on pagination?</strong><br />
-        After logging in, go to <%= link_to '<u>the settings page</u>'.html_safe, settings_users_path %>. You can enable it by checking "Display images with pagination" and hitting "Update Settings" button.<br /><br />
+        After logging in, go to the settings page. You can enable it by checking "Display images with pagination" and hitting "Update Settings" button.<br /><br />
       <strong>Are you going to increase the number of sites?</strong><br />
         Yes, currently we're planning to add deviantART, Pixiv, Nicoseiga, and other image board style websites.<br /><br />
   </div>
