Set font colors and background colors

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,6 +28,11 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "_colors";
+.container-fluid,
+.controlls {
+  background-color: $base-light;
+}
 // Override button color
 $color: #E4F5F5;
 $background: #5B9B9B;//#79CECE;
