--- a/app/assets/stylesheets/button_custom.css.scss
+++ b/app/assets/stylesheets/button_custom.css.scss
@@ -1,3 +1,9 @@
+@import "_colors";
+
+.btn-default {
+  color: darken($base-dark, 15%);
+}
+
 .btn-custom-darken.active {
   color: rgba(255, 255, 255, 0.75);
 }
@@ -32,4 +38,16 @@
 .btn-custom-darken:active,
 .btn-custom-darken.active {
   background-color: #3ca5a5 ;
+}
+
+.dropdown-menu {
+  li {
+    a {
+      color: $base-dark;
+    }
+    a:hover,
+    a:focus {
+      color: darken($base-dark, 15%);
+    }
+  }
 }
