--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,7 +19,7 @@
  *= require welcome
  *= require bootstrap-datepicker3
  *= require rails_bootstrap_forms
- *= require bootstrap-social
+ * require bootstrap-social
  *= require font-awesome
  *= require navbar_custom
  *= require button_custom
