--- a/app/assets/stylesheets/button_custom.css.scss
+++ b/app/assets/stylesheets/button_custom.css.scss
@@ -1,4 +1,5 @@
 @import "_colors";
+@import "_mixins";
 
 .btn-default {
   color: darken($base-dark, 15%);
@@ -50,4 +51,29 @@
       color: darken($base-dark, 15%);
     }
   }
+}
+
+.btn-social {
+  text-align: left;
+  border: none;
+  border-radius: 4px;
+  &:link, &:visited, &:hover, &:active {
+    color: $white;
+  }
+}
+
+.btn-facebook {
+  @include social-button($facebook);
+}
+
+.btn-twitter {
+  @include social-button($twitter);
+}
+
+.btn-tumblr {
+  @include social-button($tumblr);
+}
+
+.btn-email {
+  @include social-button($ice-soft);
 }
