Fix the layout around oAuth

--- a/app/assets/stylesheets/button_custom.css.scss
+++ b/app/assets/stylesheets/button_custom.css.scss
@@ -60,6 +60,11 @@
   &:link, &:visited, &:hover, &:active {
     color: $white;
   }
+  i {
+    width: 2em;
+    margin-right: 10px;
+    text-align: center;
+  }
 }
 
 .btn-facebook {
