--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -14,10 +14,6 @@
   float: none;
   margin: 0 auto;
 }
-.btn-group-oauth {
-  width     : 90%;
-  line-height: 5px;
-}
 form .line {
   margin-bottom: 5px; //adjust to your liking
 }
@@ -43,9 +39,10 @@ form .line {
   z-index   : 9999;
 }
 .wrapper-oauth {
+  padding: 20px;
   text-align: center;
   line-height: 10px;
-  background-color : #7ACECE;
+  background-color : $ice-light;
   z-index   : 9999;
 }
 .wrapper-sign-in {
@@ -54,24 +51,19 @@ form .line {
   overflow  : hidden;
   z-index   : 2;
 }
-.link-sign-in a {
-  color: #000;
-  text-decoration: none;
-  &:visited {
-    color: #000;
-  }
-  &:hover {
-    color: #000;
-    text-decoration: underline;
-  }
+.link-sign-in {
+  margin-top: 20px;
 }
-
+.btn-group-oauth {
+  margin-bottom: 10px;
+}
 
 
 // styles for "Creating an account means you've accepted Term of Service and..."
 .warning{
   font-size: 10px;
   line-height: 10px;
+  margin-bottom: 10px;
 }
 .warning a {
   &:hover {
