Fix the margins of description boxes

--- a/app/assets/javascripts/component.js.coffee.erb
+++ b/app/assets/javascripts/component.js.coffee.erb
@@ -1,8 +1,8 @@
 class @Component
   constructor: () ->
 
+  # [WIP]
   initCollapsables: () ->
-    console.log('test')
     # Re-position images when collapse bar is torrigered
     $('#filter-sort').on('hidden.bs.collapse', () ->
       console.log('hidden')
