--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -42,9 +42,20 @@ $border: #5B9B9B;//#79CECE;
 
 #footer {
   clear:  left;
+  text-align: center;
+  padding: 20px;
   bottom: 0;
   width:  100%;
-  height: 100px;
+  ul {
+    border-left: 1px solid $white;
+    display: inline-block;
+    padding: 0;
+  }
+  li {
+    display: inline-block;
+    padding: 2px 20px;
+    border-right: 1px solid $white;
+  }
 }
 
 
