Fix unclosed tag

--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -17,8 +17,6 @@
         After logging in, go to the settings page. You can enable it by checking "Display images with pagination" and hitting "Update Settings" button.<br /><br />
       <strong>Are you going to increase the number of sites?</strong><br />
         Yes, currently we're planning to add deviantART, Pixiv, Nicoseiga, and other image board style websites.<br /><br />
+    </div>
   </div>
 </div>
-<br />
-  <br />
-  <br />
