Stick the footer to the bottom

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,15 +13,16 @@
   <%= analytics_init if Rails.env.production? %>
 </head>
 <body class="no-touch">
+<div id="wrapper">
+  <%# render 'shared/header' if signed_in? %>
+  <% if signed_in? %>
+    <%= render 'shared/header' %>
+  <% else %>
+    <%= render 'shared/header_top' %>
+  <% end %>
 
-<%# render 'shared/header' if signed_in? %>
-<% if signed_in? %>
-  <%= render 'shared/header' %>
-<% else %>
-  <%= render 'shared/header_top' %>
-<% end %>
-
-<%= yield %>
+  <%= yield %>
+</div>
 
 <%= render 'shared/footer' unless @disable_fotter %>
 
