--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,10 +28,24 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "_colors";
-.container-fluid,
-.controlls {
+
+html,
+body { // For sticky footer
+  height: 100%;
+}
+
+body:before { // For sticky footer
+  content: "";
+  height: 100%;
+  float: left;
+  width: 0;
+  margin-top: -32767px;
+}
+#wrapper { // For sticky footer
+  min-height: 100%;
   background-color: $base-light;
 }
+
 // Override button color
 $color: #E4F5F5;
 $background: #5B9B9B;//#79CECE;
@@ -41,11 +55,14 @@ $border: #5B9B9B;//#79CECE;
 }
 
 #footer {
-  clear:  left;
+  background-color: $base-pale;
+  clear: both;
   text-align: center;
   padding: 20px;
-  bottom: 0;
   width:  100%;
+  position: relative; // For sticky footer
+  margin-top: -100px;
+  height: 100px;
   ul {
     border-left: 1px solid $white;
     display: inline-block;
@@ -57,7 +74,6 @@ $border: #5B9B9B;//#79CECE;
     border-right: 1px solid $white;
   }
 }
-
 
 // Header's logo related styles
 .navbar-inverse {
