--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,4 +1,5 @@
 @import "_colors";
+@import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700);
 
 body {
   background-color: $base-pale;
