Set font-family and increase font-size

--- a/app/assets/stylesheets/navbar_custom.css.scss
+++ b/app/assets/stylesheets/navbar_custom.css.scss
@@ -21,6 +21,7 @@
 .navbar-ispick .navbar-nav > li > a {
     color: #E4F5F5;//#777;
     padding: 10px 25px 20px 25px;
+    font-weight: 700;
 }
 .navbar-ispick .navbar-nav > li > a:hover,
 .navbar-ispick .navbar-nav > li > a:focus {
