--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,10 +1,7 @@
-<%# render 'shared/modal_avatar' %>
-
-
 <nav class="navbar navbar-ispick" role="navigation">
   <!-- Render logo image in navbar's "brand" area -->
   <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menu">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -13,7 +10,7 @@
     <%= link_to image_tag(asset_path('ispick_logo_half0.png'), class: 'logo'), home_users_path %>
   </div>
 
-
+  <!-- Render collapse items -->
   <%= navbar_collapse do %>
     <%= navbar_group class: 'collapse-header', id: 'menu' do %>
 
