--- a/app/views/shared/_header_top.html.erb
+++ b/app/views/shared/_header_top.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-ispick" role="navigation">
   <!-- Render logo image in navbar's "brand" area -->
   <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menu">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -10,9 +10,9 @@
     <%= link_to image_tag(asset_path('ispick_logo_half0.png'), class: 'logo'), '/' %>
   </div>
 
-
-  <%= navbar_collapse do %>
-    <%= navbar_group class: 'collapse-header', id: 'menu' do %>
+  <!-- Render collapse items -->
+  <%= navbar_collapse id: 'menu' do %>
+    <%= navbar_group class: 'collapse-header' do %>
       <!-- Other items is rendered by helper methods as usual -->
       <%= navbar_item 'RSS', rss_users_path, class: 'collapse-item' %>
       <%# navbar_item 'Sign in', '/signin_with_password', class: 'collapse-item' %>
